# server-properties-editor

./: .gitignore  Metadata.toml  README.md
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: lib.rs
frontend/: package.json
frontend/src/: PropertiesEditorPage.tsx  app.css  index.ts  properties.ts
